added the html/css form for interval locations

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,16 @@ form {
     align-items: center;
 }
 
+fieldset {
+    margin: 20px 0;
+}
+
+fieldset legend {
+    padding: 0 10px;
+    color: white;
+    font-weight: bold;
+}
+
 label {
     padding: 5px 80px;
     display: flex;
