--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,6 +206,12 @@ tr:nth-of-type(even) {
     color: white;
     left: 6px;
 }
+
+.save-icon::before {
+    content: "\f0c7";
+    color: white;
+    left: 6px;
+}
 /* END icons */
 
 /* buttons */
@@ -222,6 +228,7 @@ tr:nth-of-type(even) {
 .button:hover {
     background-color: #006699;
     border-bottom: 2px solid #003366;
+    cursor: pointer;
 }
 /* END buttons */
 
