--- a/templates/article/new.twig.html
+++ b/templates/article/new.twig.html
@@ -19,22 +19,22 @@
                 <input type="text" id="code" name="code" required>
             </label>
             <label>Description
-                <input type="text" id="description" name="description" required>
+                <input type="text" id="description" name="description">
             </label>
             <label>Poids
-                <input type="number" id="weight" name="weight" value="0" required>
+                <input type="number" id="weight" name="weight" value="0">
             </label>
             <label>Largeur
-                <input type="number" id="width" name="width" value="0" required>
+                <input type="number" id="width" name="width" value="0">
             </label>
             <label>Hauteur
-                <input type="number" id="height" name="height" value="0" required>
+                <input type="number" id="height" name="height" value="0">
             </label>
             <label>Longueur
-                <input type="number" id="length" name="length" value="0" required>
+                <input type="number" id="length" name="length" value="0">
             </label>
             <label>Code à Barre
-                <input type="text" id="barcode" name="barcode" required>
+                <input type="text" id="barcode" name="barcode">
             </label>
             <input type="submit" value="Créer l'article" id="articleSubmit">
             <input type="hidden" id="token" name="token" value = {{ token }}>
