--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -25,7 +25,8 @@
         </div>
         <div class="articles-action">  
             <h3>Rechercher un Article</h3>
-            <form method="POST" action="/article/showlist">
+            <p class="error" id="articleSearchFeedback"></p>
+            <form method="POST" id="searchArticleForm" action="/article/showlist">
                 <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
                 <input type="submit" value="Rechercher">
                 <input type="hidden" name="token" id="token" value="{{ token }}">
