fixed issue with pagination if some research was done

--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -15,7 +15,7 @@
             <nav>
                 {% if role is defined %}
                     <ul>
-                        <li><a href="/article/showlist/1" class="icon article-icon">Articles</a></li>
+                        <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
                         <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
                         <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
                         {% if role == 'admin' %}
