--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -18,7 +18,7 @@
                         <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
                         <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
                         <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
-                        {% if role == 'admin' %}
+                        {% if role == 'admin' or role == 'superadmin' %}
                             <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
                         {% endif %}
                         <li><a href="/logout" class="icon logout-icon">Déconnexion</a></li>
