--- a/templates/admin/user/index.twig.html
+++ b/templates/admin/user/index.twig.html
@@ -48,7 +48,7 @@
         <section>
             <p id="newUserFeedback" class="error"></p>
             <h2>Créer un nouvel Utilisateur</h2>
-            <form method="POST" id="userForm" action="/user/createsingle">
+            <form method="POST" id="userForm" action="/user/create">
                 <label>Nom d'Utilisateur
                     <input type="text" id="username" name="username" required>
                 </label>        
