--- a/templates/article/single.twig.html
+++ b/templates/article/single.twig.html
@@ -1,5 +1,5 @@
 {% extends "base.twig.html" %}
-{% block title %}Visualisation d'un article{% endblock %}
+{% block title %}Visualisation d'un Article{% endblock %}
 
 {% block body %}
     <section>
@@ -18,7 +18,7 @@
         {% endif %}
 
         {% if article == null %}
-            <h1>Fichier Article : <span class="white">Inexistant</span></h1>
+            <h1>Fiche Article : <span class="white">Inexistant</span></h1>
             <p class="error">
                 L'article spécifié n'existe pas.
             </p>
