--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -15,9 +15,9 @@
             <nav>
                 {% if role is defined %}
                     <ul>
-                        <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
-                        <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
-                        <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
+                        <li><a href="/article/index" class="icon article-icon">Articles</a></li>
+                        <li><a href="/stock/index" class="icon stock-icon">Stocks</a></li>
+                        <li><a href="/movement/index" class="icon movement-icon">Mouvements</a></li>
                         {% if role == 'admin' or role == 'superadmin' %}
                             <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
                         {% endif %}
