changed all references to old showlist route, to index

--- a/templates/article/show.twig.html
+++ b/templates/article/show.twig.html
@@ -13,7 +13,7 @@
             </p>
         {% elseif log == 3 %}
             <p class="valid">
-                L'article a bien été créé'.
+                L'article a bien été créé.
             </p>
         {% endif %}
 
