--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="/user/index" class="icon user-icon">Utilisateurs</a></li>
                     <li><a href="/location/index" class="icon location-icon">Emplacements</a></li>
-                    <li><a href="/article/showlist" class="icon return-icon">Retour</a></li>
+                    <li><a href="/article/index" class="icon return-icon">Retour</a></li>
                 </ul>
             </nav>
         </header>
