--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -26,7 +26,7 @@
         <div class="articles-action">  
             <h3>Rechercher un Article</h3>
             <p class="error" id="articleSearchFeedback"></p>
-            <form method="POST" id="searchArticleForm" action="/article/showlist">
+            <form method="POST" id="searchArticleForm" action="/article/index">
                 <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
                 <input type="submit" value="Rechercher">
                 <input type="hidden" name="token" id="token" value="{{ token }}">
