--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,6 +294,21 @@ header nav {
     font-size: 2.0em;
     font-weight: bold;
 }
+
+#loggedUsername {
+    text-decoration: underline;
+    font-size: 0.9em;
+    color: rgb(64, 64, 64);
+    padding-left: 5px;
+}
+
+#loggedUsername::before {
+    content: '[';
+}
+
+#loggedUsername::after {
+    content: ']';
+}
 /* end Header*/
 
 /* article */
