--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,6 +213,12 @@ tr:nth-of-type(even) {
     color: white;
     left: 6px;
 }
+
+.add-icon::before {
+    content: "\f067";
+    color: white;
+    left: 6px;
+}
 /* END icons */
 
 /* buttons */
@@ -342,3 +348,40 @@ header nav {
     border-radius: 15px; 
 }
 /* end article */
+
+/* ORDER */
+.orderRow {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: 2px 0;
+}
+
+.orderRow label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.orderRow label {
+    width: 80%;
+    padding: 5px;
+}
+
+.orderRow label:nth-of-type(2) {
+    flex: 1;
+}
+
+.orderRow label:nth-of-type(1), .orderRow label:nth-of-type(3) {
+    flex: 2;
+}
+
+div .orderRow:nth-of-type(odd) {
+    background-color: #dbe2e7;
+}
+
+div .orderRow:nth-of-type(even) {
+    background-color: #c7ced3;
+}
+/* end ORDER */
