--- a/templates/movement/incoming.twig.html
+++ b/templates/movement/incoming.twig.html
@@ -23,9 +23,10 @@
             <fieldset>
                 <legend>Produits</legend>
                 <div class="orderRow">
-                    <label>Code Article<input type="text"></label>
-                    <label>Quantité<input type="text"></label>
-                    <label>Emplacement<input type="text"></label>
+                    <label>Code Article<input type="text" name="article"></label>
+                    <label>Quantité<input type="text" name="quantity"></label>
+                    <label>Emplacement<input type="text" name="location"></label>
+                    <span><a href="#" class="button icon delete-icon">Effacer</a></span>
                 </div>
             </fieldset>
             <p><a href="#" class="button icon add-icon" id="addRowButton">Ajouter une ligne</a></p>
