--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -26,5 +26,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/js/script.js"></script>
+        {% block js %}{% endblock %}
     </body>
 </html>
