separated the javascript in multiple files

--- a/templates/admin/location/index.twig.html
+++ b/templates/admin/location/index.twig.html
@@ -124,3 +124,7 @@
         {% endif %}
     </section>
 {% endblock %}
+
+{% block js %}
+    <script src="/js/locationForms.js"></script>
+{% endblock %}
