--- a/templates/admin/user/index.twig.html
+++ b/templates/admin/user/index.twig.html
@@ -73,3 +73,7 @@
         </section>
     </section>
 {% endblock %}
+
+{% block js %}
+    <script src="/js/newUserForm.js"></script>
+{% endblock %}
