--- a/templates/admin/user/show.twig.html
+++ b/templates/admin/user/show.twig.html
@@ -51,3 +51,7 @@
         {% endif %}
     </section>
 {% endblock %}
+
+{% block js %}
+    <script src="/js/editUserForm.js"></script>
+{% endblock %}
