--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -78,3 +78,7 @@
         {% endif %}
     </section>
 {% endblock %}
+
+{% block js %}
+    <script src="/js/searchArticleForm.js"></script>
+{% endblock %}
